--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,35 @@
   <title>Weather App</title>
 </head>
 <body>
-  <input type="text" id="input-city">
-  <button id="submit-button">Search</button>
+  <div id="content">
+    
+    <div class="state">
+      <div id="state-main">Clouds</div>
+      <div id="state-desc">few clouds</div>
+    </div>
+
+    <div class="info">
+      <div class="wind">
+        <div class="speed"> <span id="speed">12</span> <br> Wind Speed </div>
+        <img alt="Wind Icon">
+        <div class="degree"> <span id="deg">40</span> <br> Direction</div>
+      </div>
+      <div class="location">
+        <div id="city">Alexandria</div>
+        <div id="country">EG</div>
+      </div>
+      <div class="temperature">
+        <div class="temp"> <span id="temp">32</span> <br> Temperature </div>
+        <img alt="Temperature Icon">
+        <div class="feels-like"> <span id="feels-like">34</span> <br> Feels Like</div>
+      </div>
+    </div>
+
+    <div class="search-container">
+      <input type="text" id="input-city" placeholder="City">
+      <img id="submit-button">
+    </div>
+
+  </div>
 </body>
 </html>
