add default location

--- a/src/template.html
+++ b/src/template.html
@@ -10,33 +10,36 @@
   <div id="content">
     
     <div class="state">
-      <div id="state-main">Clouds</div>
-      <div id="state-desc">few clouds</div>
+      <div id="state-main"></div>
+      <div id="state-desc"></div>
     </div>
 
     <div class="info">
       <div class="wind">
-        <div class="speed"> <span id="speed">12</span> <br> Wind Speed </div>
+        <div class="speed"> <span id="speed"></span> <br> Wind Speed </div>
         <img alt="Wind Icon">
-        <div class="degree"> <span id="deg">40</span> <br> Direction</div>
+        <div class="degree"> <span id="deg"></span> <br> Direction</div>
       </div>
       <div class="middle-info">
         <div class="location">
-          <div id="city">Alexandria</div>
-          <div id="country">EG</div>
+          <div id="city">Cairo</div>
+          <div id="country"></div>
         </div>
-        <div class="humidity"><span id="humidity">71</span> <br> humidity</div>
+        <div class="humidity"><span id="humidity"></span>
+          <span>%</span> <br> humidity</div>
       </div>
       <div class="temperature">
-        <div class="temp"> <span id="temp">32</span> <br> Temperature </div>
+        <div class="temp">
+          <span>°</span> <span id="temp"></span> <br> Temperature </div>
         <img alt="Temperature Icon">
-        <div class="feels-like"> <span id="feels-like">34</span> <br> Feels Like</div>
+        <div class="feels-like">
+          <span>°</span> <span id="feels-like"></span> <br> Feels Like</div>
       </div>
     </div>
 
     <div class="search-container">
       <button id="unit"><span>°C</span></button>
-      <input type="text" id="input-city" placeholder="City">
+      <input type="search" id="input-city" placeholder="City">
       <img id="submit-button">
     </div>
 
