add wind direction arrow

--- a/src/template.html
+++ b/src/template.html
@@ -18,7 +18,7 @@
       <div class="wind">
         <div class="speed"> <span id="speed"></span> <br> Wind Speed </div>
         <img alt="Wind Icon">
-        <div class="degree"> <span id="deg"></span> <br> Direction</div>
+        <div class="degree"> <img id="deg" alt="Wind Direction"> <br> Direction</div>
       </div>
       <div class="middle-info">
         <div class="location">
